feature: relational model done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -9,16 +9,16 @@
     "\n",
     "### Docente Responsável\n",
     "\n",
-    "Prof. FirstName LastName\n",
+    "Prof. Flávio Martins\n",
     "\n",
-    "### Grupo GG\n",
+    "### Grupo 21\n",
     "<dl>\n",
     "    <dt>HH horas (33.3%)</dt>\n",
-    "    <dd>istxxxxxxxx FirstName LastName</dd>\n",
+    "    <dd>ist1100293 Carlos Felgueiras</dd>\n",
     "    <dt>HH horas (33.3%)</dt>\n",
-    "    <dd>istxxxxxxxx FirstName LastName</dd>\n",
+    "    <dd>ist1102556 Daniel Carvalho</dd>\n",
     "    <dt>HH horas (33.3%)</dt>\n",
-    "    <dd>istxxxxxxxx FirstName LastName</dd>\n",
+    "    <dd>ist1102597 Duarte Sousa</dd>\n",
     "<dl>"
    ]
   },
@@ -64,8 +64,7 @@
    "source": [
     "### 1.1 Modelo Relacional com Restrições de Integridade\n",
     "\n",
-    "1. Desenvolva um Modelo Relacional correspondente ao modelo Entidade-Associação;\n",
-    "2. Complemente a seu Modelo Relacional com um conjunto de Restrições de Integridade que represente o modelo E-A apresentado com a maior fidelidade."
+    "1. Desenvolva um Modelo Relacional correspondente ao modelo Entidade-Associação;2. Complemente a seu Modelo Relacional com um conjunto de Restrições de Integridade que represente o modelo E-A apresentado com a maior fidelidade."
    ]
   },
   {
@@ -73,21 +72,42 @@
    "id": "28f1998a-b5d6-41b5-851c-4318bb556cb8",
    "metadata": {},
    "source": [
-    "- relacaoA (<u>atributo1</u>, … , atributoN)\n",
-    "    - atributoX, … , atributoZ: FK (RelacaoDestino)\n",
-    "    - unique(atributoA, … , AtributoC)\n",
-    "- relacaoB (<u>atributo1</u>, … , atributoN)\n",
-    "    - atributoX, … , atributoZ: FK (RelacaoDestino)\n",
-    "    - unique(atributoA, … , AtributoC)\n",
-    "- relacaoC (<u>atributo1</u>, … , atributoN)\n",
-    "    - atributoX, … , atributoZ: FK (RelacaoDestino)\n",
-    "    - unique(atributoA, … , AtributoC)\n",
-    "- relacaoD (<u>atributo1</u>, … , atributoN)\n",
-    "    - atributoX, … , atributoZ: FK (RelacaoDestino)\n",
-    "    - unique(atributoA, … , AtributoC)\n",
-    "- relacaoE (<u>atributo1</u>, … , atributoN)\n",
-    "    - atributoX, … , atributoZ: FK (RelacaoDestino)\n",
-    "    - unique(atributoA, … , AtributoC)"
+    "- Employee (<u>ssn</u>, TIN,  bdate, name)\n",
+    "    - unique(TIN)\n",
+    "- Department (<u>name</u>)\n",
+    "- Workplace (<u>address</u>, lat, long)\n",
+    "    - unique(lat, long)\n",
+    "- Office (<u>address</u>)\n",
+    "    - address: FK (Workplace)\n",
+    "- Warehouse (<u>adress</u>)\n",
+    "    - address: FK (Workplace)\n",
+    "- Customer (<u>custNo</u>, name, email, phone, address)\n",
+    "    - unique(email)\n",
+    "- Order (<u>orderNo</u>, custNo, date)\n",
+    "    - custNo: FK (Customer) not null\n",
+    "- Sale (<u>orderNo</u>)\n",
+    "    - orderNo: FK (Order)\n",
+    "- Product (<u>sku</u>, name, description, price, ean)\n",
+    "- Supplier (<u>tin</u>, sku, address, name, date)\n",
+    "    - sku: FK (Product) not null\n",
+    "\n",
+    "- works (<u>ssn</u>, <u>name</u>, <u>address</u>)\n",
+    "    - ssn: FK (Employee)\n",
+    "    - name: FK (Department)\n",
+    "    - address: FK (Workplace)\n",
+    "- process (<u>ssn</u>, <u>orderNo</u>)\n",
+    "    - ssn: FK (Employee)\n",
+    "    - orderNo: FK (Order)\n",
+    "- pay (<u>custNo</u>, <u>orderNo</u>)\n",
+    "    - custNo: FK (Customer)\n",
+    "    - orderNo: FK (Sale)\n",
+    "    - unique(orderNo)\n",
+    "- contains (<u>orderNo</u>, <u>sku</u>, qty)\n",
+    "    - orderNo: FK (Order)\n",
+    "    - sku: FK (Product)\n",
+    "- delivery (<u>address</u>, <u>tin</u>)\n",
+    "    - address: FK (Warehouse)\n",
+    "    - tin: FK (Supplier)"
    ]
   },
   {
@@ -104,7 +124,12 @@
    "cell_type": "markdown",
    "id": "a5cf04b8-494d-4f83-9a36-bdfb4653b2b1",
    "metadata": {},
-   "source": []
+   "source": [
+    "- RI-1: Todo o ssn em Employee tem de estar presente em works.\n",
+    "- RI-2: Todo o par (custNo, orderNo) em pay tem de estar presente em Order.\n",
+    "- RI-3: Todo o orderNo em Order tem de estar presente em contains.\n",
+    "- RI-4: Todo o sku em Product tem de estar presente em Supplier."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -484,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
