feature: relational algebra

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -172,7 +172,7 @@
    "id": "fb153d59-2d55-484f-bed9-0c60e02b27ae",
    "metadata": {},
    "source": [
-    "$\\Pi_{atributo1} \\big( \\sigma_{atributo1=atributo2} (relacaoA \\bowtie relacaoB) \\big)$"
+    "$\\Pi_{\\text{c.name}} \\big(\\text{Customer} \\bowtie_{\\text{c.custNo} = \\text{o.custNo}}\\rho_{o}((\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order})) \\bowtie \\text{contains} \\bowtie (\\sigma_{\\text{price} > 50} (\\text{Product}))) \\big)$"
    ]
   },
   {
