feature: relational algebra done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -188,7 +188,9 @@
    "id": "01c30a54-83d4-43c1-a7b2-871cef8552ec",
    "metadata": {},
    "source": [
-    "$\\Pi_{atributo1} \\big( \\sigma_{atributo1=atributo2} (relacaoA \\bowtie relacaoB) \\big)$"
+    "$R \\leftarrow \\text{Employee} \\bowtie_{\\text{e.ssn} = \\text{w.ssn}} \\text{works} \\bowtie \\text{Workplace}$\n",
+    "\n",
+    "$\\Pi_{\\text{e.name}}\\big(((R \\bowtie \\text{Warehouse}) - (R \\bowtie \\text{Office})) \\bowtie \\text{process} \\bowtie \\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-01-2023\"}} (\\text{Order}) \\big)$"
    ]
   },
   {
@@ -204,7 +206,9 @@
    "id": "e0411d6f-5cc9-4d4a-a70f-d3a3957b1111",
    "metadata": {},
    "source": [
-    "$\\Pi_{atributo1} \\big( \\sigma_{atributo1=atributo2} (relacaoA \\bowtie relacaoB) \\big)$"
+    "$R \\leftarrow {}_{\\text{sku}}G_{\\text{sum(qty)} \\rightarrow \\text{total}}(\\text{Sale} \\bowtie \\text{Order} \\bowtie \\text{contains})$\n",
+    "\n",
+    "$\\Pi_{\\text{name}} \\big({}_{\\text{sku}}G_{\\text{max(total)}}R \\bowtie \\text{Product} \\big)$"
    ]
   },
   {
@@ -220,7 +224,7 @@
    "id": "31ba6844-b37c-40df-9745-7db2f3254fda",
    "metadata": {},
    "source": [
-    "$\\Pi_{atributo1} \\big( \\sigma_{atributo1=atributo2} (relacaoA \\bowtie relacaoB) \\big)$"
+    "${}_{\\text{orderNo}}G_{\\text{sum(sub_total)} \\rightarrow \\text{total}} \\rho_{3 \\rightarrow \\text{sub_total}}\\Pi_{\\text{orderNo, sku, qty*price}}  \\big(\\text{Sale} \\bowtie \\text{Order} \\bowtie \\text{contains} \\bowtie \\text{Product} \\big)$"
    ]
   },
   {
