--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -88,6 +88,7 @@
     "- Sale (<u>orderNo</u>)\n",
     "    - orderNo: FK (Order)\n",
     "- Product (<u>sku</u>, name, description, price, ean)\n",
+    "    - unique(ean)\n",
     "- Supplier (<u>tin</u>, sku, address, name, date)\n",
     "    - sku: FK (Product) not null\n",
     "\n",
@@ -105,6 +106,7 @@
     "- contains (<u>orderNo</u>, <u>sku</u>, qty)\n",
     "    - orderNo: FK (Order)\n",
     "    - sku: FK (Product)\n",
+    "    - (qty >= 0)\n",
     "- delivery (<u>address</u>, <u>tin</u>)\n",
     "    - address: FK (Warehouse)\n",
     "    - tin: FK (Supplier)"
@@ -172,7 +174,7 @@
    "id": "fb153d59-2d55-484f-bed9-0c60e02b27ae",
    "metadata": {},
    "source": [
-    "$\\Pi_{\\text{c.name}} \\big(\\text{Customer} \\bowtie_{\\text{c.custNo} = \\text{o.custNo}}\\rho_{o}((\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order})) \\bowtie \\text{contains} \\bowtie (\\sigma_{\\text{price} > 50} (\\text{Product}))) \\big)$"
+    "$\\Pi_{\\text{c.name}} \\big(\\text{Customer} \\bowtie_{\\text{c.custNo} = \\text{o.custNo}}\\rho_{o}((\\sigma_{\\text{date} \\ge \\text{\"01-01-2023\"} \\wedge \\text{date} \\le \\text{\"31-12-2023\"}} (\\text{Order}))\\bowtie \\text{contains} \\bowtie (\\sigma_{\\text{price} > 50} (\\text{Product}))) \\big)$"
    ]
   },
   {
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "195436d2-5bb5-4ab8-879b-b7ca19fb8d8a",
    "metadata": {
     "tags": []
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -286,20 +288,175 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- schema.sql\n",
-      "\n",
-      "-- CREATE TABLE ...]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "-- schema.sql\n",
+    "DROP TABLE IF EXISTS employees CASCADE;\n",
+    "DROP TABLE IF EXISTS departments CASCADE;\n",
+    "DROP TABLE IF EXISTS workplaces CASCADE;\n",
+    "DROP TABLE IF EXISTS offices CASCADE;\n",
+    "DROP TABLE IF EXISTS warehouses CASCADE;\n",
+    "DROP TABLE IF EXISTS customers CASCADE;\n",
+    "DROP TABLE IF EXISTS orders CASCADE;\n",
+    "DROP TABLE IF EXISTS sales CASCADE;\n",
+    "DROP TABLE IF EXISTS products CASCADE;\n",
+    "DROP TABLE IF EXISTS suppliers CASCADE;\n",
+    "DROP TABLE IF EXISTS works CASCADE;\n",
+    "DROP TABLE IF EXISTS process CASCADE;\n",
+    "DROP TABLE IF EXISTS pay CASCADE;\n",
+    "DROP TABLE IF EXISTS contains CASCADE;\n",
+    "DROP TABLE IF EXISTS delivery CASCADE;\n",
     "\n",
-    "-- DROP TABLE ...\n",
-    "-- CREATE TABLE ..."
+    "CREATE TABLE employees\n",
+    "(\n",
+    "    ssn VARCHAR(20) PRIMARY KEY,\n",
+    "    tin VARCHAR(20) UNIQUE NOT NULL,\n",
+    "    bdate DATE NOT NULL,\n",
+    "    name VARCHAR(80) NOT NULL\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE departments\n",
+    "(\n",
+    "    name VARCHAR(80) PRIMARY KEY\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE workplaces\n",
+    "(\n",
+    "    address VARCHAR(300) PRIMARY KEY,\n",
+    "    gps_lat DOUBLE PRECISION,\n",
+    "    gps_long DOUBLE PRECISION,\n",
+    "    UNIQUE (gps_lat, gps_long)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE offices\n",
+    "(\n",
+    "    address VARCHAR(300) PRIMARY KEY REFERENCES workplaces\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE warehouses\n",
+    "(\n",
+    "    address VARCHAR(300) PRIMARY KEY REFERENCES workplaces\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE customers\n",
+    "(\n",
+    "    customer_number SERIAL PRIMARY KEY,\n",
+    "    name VARCHAR(80),\n",
+    "    email VARCHAR(50) UNIQUE,\n",
+    "    phone_number VARCHAR(20),\n",
+    "    address VARCHAR(300)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE orders\n",
+    "(\n",
+    "    order_number BIGSERIAL PRIMARY KEY,\n",
+    "    customer_number INT NOT NULL REFERENCES customers,\n",
+    "    order_date DATE\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE sales\n",
+    "(\n",
+    "    order_number BIGINT PRIMARY KEY REFERENCES orders\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE products\n",
+    "(\n",
+    "    sku VARCHAR(20) PRIMARY KEY,\n",
+    "    name VARCHAR(80),\n",
+    "    description VARCHAR(1000),\n",
+    "    price DECIMAL,\n",
+    "    ean VARCHAR(13) UNIQUE\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE suppliers\n",
+    "(\n",
+    "    tin VARCHAR(20) PRIMARY KEY,\n",
+    "    sku VARCHAR(20) NOT NULL REFERENCES products,\n",
+    "    address VARCHAR(300),\n",
+    "    name VARCHAR(80),\n",
+    "    contract_date DATE NOT NULL\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE works\n",
+    "(\n",
+    "    ssn VARCHAR(20) NOT NULL REFERENCES employees,\n",
+    "    department_name VARCHAR(80) NOT NULL REFERENCES departments(name),\n",
+    "    workplace_address VARCHAR(300) NOT NULL REFERENCES workplaces(address),\n",
+    "    PRIMARY KEY(ssn, department_name, workplace_address)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE process\n",
+    "(\n",
+    "    employee_ssn VARCHAR(20) NOT NULL REFERENCES employees(ssn),\n",
+    "    order_number BIGINT NOT NULL REFERENCES orders,\n",
+    "    PRIMARY KEY(employee_ssn, order_number)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE pay\n",
+    "(\n",
+    "    customer_number INT NOT NULL REFERENCES customers,\n",
+    "    order_number BIGINT UNIQUE NOT NULL REFERENCES orders,\n",
+    "    PRIMARY KEY(customer_number, order_number)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE contains\n",
+    "(\n",
+    "    order_number BIGINT NOT NULL REFERENCES orders,\n",
+    "    sku VARCHAR(20) NOT NULL REFERENCES products,\n",
+    "    qty INT NOT NULL,\n",
+    "    PRIMARY KEY(order_number, sku),\n",
+    "    CONSTRAINT qty_positive CHECK (qty > 0)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE delivery\n",
+    "(\n",
+    "    warehouse_address VARCHAR(300) NOT NULL REFERENCES warehouses(address),\n",
+    "    supplier_tin VARCHAR(20) NOT NULL REFERENCES suppliers(tin),\n",
+    "    PRIMARY KEY(warehouse_address, supplier_tin)\n",
+    ");"
    ]
   },
   {
@@ -314,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -326,18 +483,14 @@
      "text": [
       "*  postgresql://db:***@postgres/db\n",
       "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- populate.sql\n",
-      "\n",
-      "-- CREATE TABLE ...]\n",
+      "[SQL: -- populate.sql]\n",
       "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
     }
    ],
    "source": [
     "%%sql\n",
-    "-- populate.sql\n",
-    "\n",
-    "-- INSERT ..."
+    "-- populate.sql\n"
    ]
   },
   {
