feature: schema.sql fixed

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "[]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,110 +352,135 @@
     "\n",
     "CREATE TABLE employees\n",
     "(\n",
-    "    ssn VARCHAR(20) PRIMARY KEY,\n",
+    "    ssn VARCHAR(20),\n",
     "    tin VARCHAR(20) UNIQUE NOT NULL,\n",
     "    bdate DATE NOT NULL,\n",
-    "    name VARCHAR(80) NOT NULL\n",
+    "    name VARCHAR(80) NOT NULL,\n",
+    "    PRIMARY KEY(ssn)\n",
     ");\n",
     "\n",
     "CREATE TABLE departments\n",
     "(\n",
-    "    name VARCHAR(80) PRIMARY KEY\n",
+    "    name VARCHAR(80),\n",
+    "    PRIMARY KEY(name)\n",
     ");\n",
     "\n",
     "CREATE TABLE workplaces\n",
     "(\n",
-    "    address VARCHAR(300) PRIMARY KEY,\n",
+    "    address VARCHAR(300),\n",
     "    gps_lat DOUBLE PRECISION,\n",
     "    gps_long DOUBLE PRECISION,\n",
-    "    UNIQUE (gps_lat, gps_long)\n",
+    "    UNIQUE (gps_lat, gps_long),\n",
+    "    PRIMARY KEY(address)\n",
     ");\n",
     "\n",
     "CREATE TABLE offices\n",
     "(\n",
-    "    address VARCHAR(300) PRIMARY KEY REFERENCES workplaces\n",
+    "    address VARCHAR(300),\n",
+    "    PRIMARY KEY(address),\n",
+    "    FOREIGN KEY(address) REFERENCES workplaces\n",
     ");\n",
     "\n",
     "CREATE TABLE warehouses\n",
     "(\n",
-    "    address VARCHAR(300) PRIMARY KEY REFERENCES workplaces\n",
+    "    address VARCHAR(300),\n",
+    "    PRIMARY KEY(address),\n",
+    "    FOREIGN KEY(address) REFERENCES workplaces\n",
     ");\n",
     "\n",
     "CREATE TABLE customers\n",
     "(\n",
-    "    customer_number SERIAL PRIMARY KEY,\n",
+    "    customer_number SERIAL,\n",
     "    name VARCHAR(80),\n",
     "    email VARCHAR(50) UNIQUE,\n",
     "    phone_number VARCHAR(20),\n",
-    "    address VARCHAR(300)\n",
+    "    address VARCHAR(300),\n",
+    "    PRIMARY KEY(customer_number)\n",
     ");\n",
     "\n",
     "CREATE TABLE orders\n",
     "(\n",
-    "    order_number BIGSERIAL PRIMARY KEY,\n",
+    "    order_number BIGSERIAL,\n",
     "    customer_number INT NOT NULL REFERENCES customers,\n",
-    "    order_date DATE\n",
+    "    order_date DATE,\n",
+    "    PRIMARY KEY(order_number)\n",
     ");\n",
     "\n",
     "CREATE TABLE sales\n",
     "(\n",
-    "    order_number BIGINT PRIMARY KEY REFERENCES orders\n",
+    "    order_number BIGINT,\n",
+    "    PRIMARY KEY(order_number),\n",
+    "    FOREIGN KEY(order_number) REFERENCES orders\n",
     ");\n",
     "\n",
     "CREATE TABLE products\n",
     "(\n",
-    "    sku VARCHAR(20) PRIMARY KEY,\n",
+    "    sku VARCHAR(20),\n",
     "    name VARCHAR(80),\n",
     "    description VARCHAR(1000),\n",
     "    price DECIMAL,\n",
-    "    ean VARCHAR(13) UNIQUE\n",
+    "    ean VARCHAR(13) UNIQUE,\n",
+    "    PRIMARY KEY(sku)\n",
     ");\n",
     "\n",
     "CREATE TABLE suppliers\n",
     "(\n",
-    "    tin VARCHAR(20) PRIMARY KEY,\n",
-    "    sku VARCHAR(20) NOT NULL REFERENCES products,\n",
+    "    tin VARCHAR(20),\n",
+    "    sku VARCHAR(20) NOT NULL,\n",
     "    address VARCHAR(300),\n",
     "    name VARCHAR(80),\n",
-    "    contract_date DATE NOT NULL\n",
+    "    contract_date DATE NOT NULL,\n",
+    "    PRIMARY KEY(tin),\n",
+    "    FOREIGN KEY(sku) REFERENCES products\n",
     ");\n",
     "\n",
     "CREATE TABLE works\n",
     "(\n",
-    "    ssn VARCHAR(20) NOT NULL REFERENCES employees,\n",
-    "    department_name VARCHAR(80) NOT NULL REFERENCES departments(name),\n",
-    "    workplace_address VARCHAR(300) NOT NULL REFERENCES workplaces(address),\n",
-    "    PRIMARY KEY(ssn, department_name, workplace_address)\n",
+    "    ssn VARCHAR(20) NOT NULL,\n",
+    "    department_name VARCHAR(80) NOT NULL,\n",
+    "    workplace_address VARCHAR(300) NOT NULL,\n",
+    "    PRIMARY KEY(ssn, department_name, workplace_address),\n",
+    "    FOREIGN KEY(ssn) REFERENCES employees,\n",
+    "    FOREIGN KEY(department_name) REFERENCES departments(name),\n",
+    "    FOREIGN KEY(workplace_address) REFERENCES workplaces(address)\n",
     ");\n",
     "\n",
     "CREATE TABLE process\n",
     "(\n",
-    "    employee_ssn VARCHAR(20) NOT NULL REFERENCES employees(ssn),\n",
-    "    order_number BIGINT NOT NULL REFERENCES orders,\n",
-    "    PRIMARY KEY(employee_ssn, order_number)\n",
+    "    employee_ssn VARCHAR(20) NOT NULL,\n",
+    "    order_number BIGINT NOT NULL,\n",
+    "    PRIMARY KEY(employee_ssn, order_number),\n",
+    "    FOREIGN KEY(employee_ssn) REFERENCES employees(ssn),\n",
+    "    FOREIGN KEY(order_number) REFERENCES orders\n",
     ");\n",
     "\n",
     "CREATE TABLE pay\n",
     "(\n",
-    "    customer_number INT NOT NULL REFERENCES customers,\n",
-    "    order_number BIGINT UNIQUE NOT NULL REFERENCES orders,\n",
-    "    PRIMARY KEY(customer_number, order_number)\n",
+    "    customer_number INT NOT NULL,\n",
+    "    order_number BIGINT UNIQUE NOT NULL,\n",
+    "    PRIMARY KEY(customer_number, order_number),\n",
+    "    FOREIGN KEY(customer_number) REFERENCES customers,\n",
+    "    FOREIGN KEY(order_number) REFERENCES orders\n",
     ");\n",
     "\n",
     "CREATE TABLE contains\n",
     "(\n",
-    "    order_number BIGINT NOT NULL REFERENCES orders,\n",
-    "    sku VARCHAR(20) NOT NULL REFERENCES products,\n",
+    "    order_number BIGINT NOT NULL,\n",
+    "    sku VARCHAR(20) NOT NULL,\n",
     "    qty INT NOT NULL,\n",
     "    PRIMARY KEY(order_number, sku),\n",
+    "    FOREIGN KEY(order_number) REFERENCES orders,\n",
+    "    FOREIGN KEY(sku) REFERENCES products,\n",
     "    CONSTRAINT qty_positive CHECK (qty > 0)\n",
     ");\n",
     "\n",
     "CREATE TABLE delivery\n",
     "(\n",
-    "    warehouse_address VARCHAR(300) NOT NULL REFERENCES warehouses(address),\n",
-    "    supplier_tin VARCHAR(20) NOT NULL REFERENCES suppliers(tin),\n",
-    "    PRIMARY KEY(warehouse_address, supplier_tin)\n",
+    "    warehouse_address VARCHAR(300) NOT NULL,\n",
+    "    supplier_tin VARCHAR(20) NOT NULL,\n",
+    "    PRIMARY KEY(warehouse_address, supplier_tin),\n",
+    "    FOREIGN KEY(warehouse_address) REFERENCES warehouses(address),\n",
+    "    FOREIGN KEY(supplier_tin) REFERENCES suppliers(tin)\n",
     ");"
    ]
   },
