feature: populate.sql started

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "[]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -507,15 +507,46 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- populate.sql]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "-- populate.sql\n"
+    "-- populate.sql\n",
+    "\n",
+    "INSERT INTO customers VALUES (DEFAULT, 'Pedro', 'pedrofrigolet@gmail.com', '+351 912345678', 'Rua da Boa Nova nº39, Ermesinde, Porto, Portugal');\n",
+    "INSERT INTO customers VALUES (DEFAULT, 'Miguel', 'migueltavares@gmail.com', '+351 942069697', 'Travessa da Esperança nº14 2ºD, Rebordosa, Porto, Portugal');\n",
+    "INSERT INTO customers VALUES (DEFAULT, 'José', 'zedopipo@gmail.com', '+351 918008576', 'Rua do Técnico nº1, Pinhal Novo, Setúbal, Portugal');\n",
+    "\n",
+    "INSERT INTO employees VALUES ('10293847562','201928376','2000-06-15','João');\n",
+    "INSERT INTO employees VALUES ('91827364503','282736579','2001-03-15','Carlos');\n",
+    "INSERT INTO employees VALUES ('10243347562','200923356','2002-04-15','Marcos');\n",
+    "\n",
+    "INSERT INTO departments VALUES('Recursos Humanos');\n",
+    "INSERT INTO departments VALUES('Logística');\n",
+    "INSERT INTO departments VALUES('Comercial');\n",
+    "\n",
+    "INSERT INTO workplaces VALUES('Recursos Humanos');"
    ]
   },
   {
