feature: populate.sql done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 133,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "[]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
     "    order_number BIGINT UNIQUE NOT NULL,\n",
     "    PRIMARY KEY(customer_number, order_number),\n",
     "    FOREIGN KEY(customer_number) REFERENCES customers,\n",
-    "    FOREIGN KEY(order_number) REFERENCES orders\n",
+    "    FOREIGN KEY(order_number) REFERENCES sales\n",
     ");\n",
     "\n",
     "CREATE TABLE contains\n",
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 132,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -516,6 +516,71 @@
       "1 rows affected.\n",
       "1 rows affected.\n",
       "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
       "1 rows affected.\n"
      ]
     },
@@ -525,7 +590,7 @@
        "[]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +611,90 @@
     "INSERT INTO departments VALUES('Logística');\n",
     "INSERT INTO departments VALUES('Comercial');\n",
     "\n",
-    "INSERT INTO workplaces VALUES('Recursos Humanos');"
+    "INSERT INTO workplaces VALUES('Rua Cid Tomar 49, Palhais, Setúbal, 2830-573', 38.623246, -9.047482);\n",
+    "INSERT INTO workplaces VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099', 38.705305, -9.377783);\n",
+    "INSERT INTO workplaces VALUES('Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542', 38.770582, -9.287598);\n",
+    "INSERT INTO workplaces VALUES('Av. Ten-Cel. Melo Antunes, Fafe, Braga, 4820-398', 41.454987, -8.178397);\n",
+    "\n",
+    "INSERT INTO offices VALUES('Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
+    "INSERT INTO offices VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099');\n",
+    "\n",
+    "INSERT INTO warehouses VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099');\n",
+    "INSERT INTO warehouses VALUES('Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542');\n",
+    "\n",
+    "INSERT INTO orders VALUES(DEFAULT, 2, '2022-11-30');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 3, '2022-12-07');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 1, '2022-12-24');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 3, '2023-01-05');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 2, '2023-01-17');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 1, '2023-01-21');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 1, '2023-02-12');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 2, '2023-03-19');\n",
+    "INSERT INTO orders VALUES(DEFAULT, 3, '2023-04-17');\n",
+    "\n",
+    "INSERT INTO sales VALUES(2);\n",
+    "INSERT INTO sales VALUES(4);\n",
+    "INSERT INTO sales VALUES(5);\n",
+    "INSERT INTO sales VALUES(8);\n",
+    "\n",
+    "INSERT INTO products VALUES('TS123456', 'Água Molhadinha, 50cl', 'Água mineral natural da Serra da Estrela. Com pH de 7.0, perfeita para a saude. Produto Nacional', 0.50);\n",
+    "INSERT INTO products VALUES('KS944RUR', 'Carregador Apple iPhone', 'Carregador lightning de 40W com fio de 40cm.', 90);\n",
+    "INSERT INTO products VALUES('KS93528TUT', 'Bolachas Oreo', 'Bolachas de chocolate com recheio de creme.', 1.50);\n",
+    "INSERT INTO products VALUES('KA17120203', 'Red Bull, 25cl', 'Bebida energética com cafeína, baixa em açúcar.', 2.50);\n",
+    "INSERT INTO products VALUES('HM21KMPW', 'Portátil Gaming ASUS Rog Strix', 'Intel Core i7, 32Gb Ram, RTX 4080, SSD NVMe 1Tb', 2389.99);\n",
+    "INSERT INTO products VALUES('X00299X9JF', 'Fortnite 1500 VBUCKS Gift Card', 'Código de acesso a 1500 VBUCKS. Compatível com Windows, Mac, iOS, Android, PlayStation, XBOX, Nintendo Switch.', 0.50);\n",
+    "\n",
+    "INSERT INTO suppliers VALUES('122365939', 'TS123456', 'Av. Santo Condestável, 1950-011 Lisboa', 'Molhadinha, Lda.', '2024-01-01');\n",
+    "INSERT INTO suppliers VALUES('135238432', 'KS944RUR', 'Campo Pequeno, 1000-082 Lisboa', 'Apple', '2024-02-01');\n",
+    "INSERT INTO suppliers VALUES('159438584', 'KS93528TUT', 'Praça Duque de Saldanha 1, 1050-094 Lisboa', 'Oreo', '2023-12-31');\n",
+    "INSERT INTO suppliers VALUES('154294955', 'KA17120203', 'Av. da Liberdade 240 2º Esq, 1250-148 Lisboa', 'Red Bull', '2024-01-01');\n",
+    "INSERT INTO suppliers VALUES('165439089', 'HM21KMPW', 'Praça Martim Moniz 39, 1150-052 Lisboa', 'ASUS', '2025-01-01');\n",
+    "INSERT INTO suppliers VALUES('194355853', 'X00299X9JF', 'Rua do Grilo 84, 1950-144 Lisboa', 'Epic Games', '2024-12-31');\n",
+    "\n",
+    "INSERT INTO works VALUES('10293847562', 'Logística', 'Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
+    "INSERT INTO works VALUES('10293847562', 'Recursos Humanos', 'Avenida Lago 23, Cascais, Lisboa, 2765-099');\n",
+    "INSERT INTO works VALUES('91827364503', 'Comercial', 'Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542');\n",
+    "INSERT INTO works VALUES('10243347562', 'Logística', 'Av. Ten-Cel. Melo Antunes, Fafe, Braga, 4820-398');\n",
+    "INSERT INTO works VALUES('10243347562', 'Comercial', 'Rua Cid Tomar 49, Palhais, Setúbal, 2830-573');\n",
+    "\n",
+    "INSERT INTO process VALUES('91827364503', 1);\n",
+    "INSERT INTO process VALUES('91827364503', 2);\n",
+    "INSERT INTO process VALUES('91827364503', 3);\n",
+    "INSERT INTO process VALUES('91827364503', 4);\n",
+    "INSERT INTO process VALUES('91827364503', 5);\n",
+    "INSERT INTO process VALUES('91827364503', 6);\n",
+    "INSERT INTO process VALUES('10243347562', 7);\n",
+    "INSERT INTO process VALUES('10243347562', 8);\n",
+    "INSERT INTO process VALUES('10243347562', 9);\n",
+    "\n",
+    "INSERT INTO pay VALUES(3, 2);\n",
+    "INSERT INTO pay VALUES(3, 4);\n",
+    "INSERT INTO pay VALUES(2, 5);\n",
+    "INSERT INTO pay VALUES(2, 8);\n",
+    "\n",
+    "INSERT INTO contains VALUES(1, 'TS123456', 16);\n",
+    "INSERT INTO contains VALUES(1, 'KA17120203', 3);\n",
+    "INSERT INTO contains VALUES(2, 'HM21KMPW', 1);\n",
+    "INSERT INTO contains VALUES(2, 'X00299X9JF', 3);\n",
+    "INSERT INTO contains VALUES(3, 'KS93528TUT', 1);\n",
+    "INSERT INTO contains VALUES(3, 'KA17120203', 1);\n",
+    "INSERT INTO contains VALUES(4, 'KA17120203', 40);\n",
+    "INSERT INTO contains VALUES(5, 'HM21KMPW', 2);\n",
+    "INSERT INTO contains VALUES(5, 'KS944RUR', 2);\n",
+    "INSERT INTO contains VALUES(6, 'KS944RUR', 1);\n",
+    "INSERT INTO contains VALUES(7, 'TS123456', 2);\n",
+    "INSERT INTO contains VALUES(7, 'KA17120203', 1);\n",
+    "INSERT INTO contains VALUES(7, 'KS93528TUT', 1);\n",
+    "INSERT INTO contains VALUES(8, 'HM21KMPW', 1);\n",
+    "INSERT INTO contains VALUES(9, 'X00299X9JF', 5);\n",
+    "\n",
+    "INSERT INTO delivery VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099', '122365939');\n",
+    "INSERT INTO delivery VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099', '135238432');\n",
+    "INSERT INTO delivery VALUES('Avenida Lago 23, Cascais, Lisboa, 2765-099', '159438584');\n",
+    "INSERT INTO delivery VALUES('Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542', '154294955');\n",
+    "INSERT INTO delivery VALUES('Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542', '165439089');\n",
+    "INSERT INTO delivery VALUES('Rua Pé Mouro Armz 108, Sintra, Lisboa, 2735-542', '194355853');\n",
+    "\n"
    ]
   },
   {
@@ -571,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 112,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -590,7 +738,6 @@
    ],
    "source": [
     "%%sql\n",
-    "\n",
     "-- SELECT ..."
    ]
   },
