feature: first query done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 136,
    "id": "7dad4bdb-454b-4e0a-af55-93580ab2b56c",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "[]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 137,
    "id": "689fbf59-980b-4c09-8b8e-7beee128b324",
    "metadata": {
     "tags": []
@@ -581,6 +581,12 @@
       "1 rows affected.\n",
       "1 rows affected.\n",
       "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
       "1 rows affected.\n"
      ]
     },
@@ -590,7 +596,7 @@
        "[]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +725,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
+   "id": "0dced880-473c-45f2-ac36-6f74afbf617b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -730,15 +744,54 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "(psycopg2.ProgrammingError) can't execute an empty query\n",
-      "[SQL: -- SELECT ...]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "4 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Miguel</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Miguel</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Pedro</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Miguel</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Miguel',), ('Miguel',), ('Pedro',), ('Miguel',)]"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "-- SELECT ..."
+    "\n",
+    "SELECT c.name \n",
+    "FROM customers c\n",
+    "INNER JOIN orders\n",
+    "    ON (orders.customer_number = c.customer_number)\n",
+    "INNER JOIN contains\n",
+    "    ON ((orders.order_number = contains.order_number) AND (orders.order_date BETWEEN '2023-01-01' AND '2023-12-31'))\n",
+    "INNER JOIN products\n",
+    "    ON ((contains.sku = products.sku) AND (products.price > 50));"
    ]
   },
   {
@@ -753,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 148,
    "id": "4da673da-e257-421f-a84e-ec7cacc74c8d",
    "metadata": {
     "tags": []
