feature: first query done

--- a/work/report.ipynb
+++ b/work/report.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 190,
    "id": "15197f8d-073e-4cb8-861f-be594a6efadd",
    "metadata": {
     "tags": []
@@ -744,7 +744,7 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://db:***@postgres/db\n",
-      "4 rows affected.\n"
+      "2 rows affected.\n"
      ]
     },
     {
@@ -761,22 +761,16 @@
        "            <td>Miguel</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>Miguel</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
        "            <td>Pedro</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Miguel</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('Miguel',), ('Miguel',), ('Pedro',), ('Miguel',)]"
+       "[('Miguel',), ('Pedro',)]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +778,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT c.name \n",
+    "SELECT DISTINCT c.name \n",
     "FROM customers c\n",
     "INNER JOIN orders\n",
     "    ON (orders.customer_number = c.customer_number)\n",
